--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test:ci": "jest --ci",
     "prepare": "husky install",
     "format": "prettier '**/*.{js,ts,css}' --write --ignore-unknown",
-    "lint": "eslint src",
-    "lint-and-fix": "eslint . --ext .ts --fix",
+    "lint": "next lint",
+    "lint-and-fix": "next lint  --fix",
     "coverage": "jest --coverage"
   },
   "dependencies": {
@@ -25,7 +25,12 @@
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
     "@types/react": "18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
+    "eslint-config-next": "^12.3.1",
     "eslint-plugin-no-loops": "^0.3.0",
+    "eslint-plugin-testing-library": "^5.9.1",
     "husky": "^8.0.0",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
