--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
+    "@types/node": "18.11.9",
     "@types/react": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
+    "autoprefixer": "latest",
     "eslint": "^8.26.0",
     "eslint-config-next": "^12.3.1",
     "eslint-plugin-no-loops": "^0.3.0",
@@ -35,7 +37,9 @@
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
     "lint-staged": "^13.0.3",
+    "postcss": "latest",
     "prettier": "^2.7.1",
+    "tailwindcss": "latest",
     "typescript": "4.6.4"
   },
   "lint-staged": {
