feat: Added next-auth

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-auth": "^4.16.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
