--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "latest",
     "next-auth": "^4.16.4",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
@@ -28,6 +29,7 @@
     "@testing-library/user-event": "14.2.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.9",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "autoprefixer": "latest",
