--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test:ci": "jest --ci",
     "prepare": "husky install",
     "format": "prettier '**/*.{js,ts,css}' --write --ignore-unknown",
-    "lint": "eslint pages --ext .ts,.tsx,.js",
-    "lint-and-fix": "eslint pages --ext .ts,.tsx,.js --fix",
+    "lint": "eslint src --ext .ts,.tsx,.js",
+    "lint-and-fix": "eslint src --ext .ts,.tsx,.js --fix",
     "coverage": "jest --coverage"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "next-auth": "^4.16.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-query": "^3.39.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
