--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
+    "@radix-ui/react-aspect-ratio": "^1.0.1",
     "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "axios": "^1.1.3",
