--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
+    "react-spinners": "^0.13.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
