--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,34 @@
   "plugins": ["testing-library", "@typescript-eslint", "no-loops"],
   "rules": {
     "no-console": 2, // change to 0 to enable console
-    "no-loops/no-loops": 2
+    "no-loops/no-loops": 2,
+    "import/no-restricted-paths": [
+      "error",
+      {
+        "zones": [
+          {
+            "target": "./src/core",
+            "from": "./src/Components"
+          },
+          {
+            "target": "./src/core",
+            "from": "./src/lib"
+          },
+          {
+            "target": "./src/core",
+            "from": "./src/pages"
+          },
+          {
+            "target": "./src/lib",
+            "from": "./src/pages"
+          },
+          {
+            "target": "./src/Components",
+            "from": "./src/pages"
+          }
+        ]
+      }
+    ]
   },
   "globals": {
     "React": true,
