--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "axios": "^1.1.3",
     "commitlint": "^17.2.0",
     "formik": "^2.2.9",
-    "next": "latest",
+    "next": "^13.1",
     "next-auth": "^4.16.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -53,7 +53,7 @@
     "lint-staged": "^13.0.3",
     "postcss": "latest",
     "prettier": "^2.7.1",
-    "tailwindcss": "latest",
+    "tailwindcss": "^3",
     "typescript": "4.6.4"
   },
   "lint-staged": {
